# GetPixelColor

./: .gitignore  LICENSE  MANIFEST.toml  README.md  README.rst  compile.sh  get-pixel-color  get-pixel-color.c  pyproject.toml  setup.py  test.py
.github/workflows/: python-package.yml  tests.yml
GetPixelColor/: __init__.py
automation/: test_area.py  test_average.py  test_pixel.py
