[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GetPixelColor"
version = "0.2.18"
authors = [
  { name="Bobrobot1", email="bobrobot@zoho.com" },
]
description = "A cross-platform python library for getting the color of a given pixel on screen."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',  
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',        
    'Programming Language :: Python :: 3'
]

[project.urls]
"GitHub" = "https://github.com/Bobrobot1/GetPixelColor"
"Bug Tracker" = "https://github.com/Bobrobot1/GetPixelColor/issues"